Table users {
    user_id integer [primary key, increment]
    username text [not null, unique]
    password_hash text [not null]
    role text [not null, note: "admin, staff, pharmacist"]
    full_name text [not null]
    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table patients {
    patient_id integer [primary key, increment]
    first_name text [not null]
    last_name text [not null]
    date_of_birth date [not null]
    gender text [note: "M, F, Other"]
    phone text
    address text
    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table inventory {
    drug_id integer [primary key, increment]
    drug_name text [not null]
    generic_name text
    batch_number text [not null]
    expiry_date date [not null]
    quantity_in_stock integer [not null, note: ">= 0"]
    unit_price real [not null, note: ">= 0"]
    supplier text
    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table prescriptions {
    prescription_id integer [primary key, increment]
    patient_id integer [not null]
    user_id integer [not null]
    prescription_date timestamp [default: `CURRENT_TIMESTAMP`]
    diagnosis text
    notes text
}

Table prescription_items {
    prescription_item_id integer [primary key, increment]
    prescription_id integer [not null]
    drug_id integer [not null]
    dosage_instructions text [not null]
    quantity_prescribed integer [not null, note: "> 0"]
}

Table sales {
    sale_id integer [primary key, increment]
    patient_id integer
    user_id integer [not null]
    sale_date timestamp [default: `CURRENT_TIMESTAMP`]
    total_amount real [not null, note: ">= 0"]
    payment_method text [note: "Cash, Card, Mobile, Insurance"]
}

Table sale_items {
    sale_item_id integer [primary key, increment]
    sale_id integer [not null]
    drug_id integer [not null]
    quantity_sold integer [not null, note: "> 0"]
    unit_price real [not null, note: ">= 0"]
    subtotal real [not null, note: ">= 0"]
}

Table config {
    config_id integer [primary key, increment]
    setting_name text [not null, unique]
    setting_value text [not null]
    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref: prescriptions.patient_id > patients.patient_id
Ref: prescriptions.user_id > users.user_id
Ref: prescription_items.prescription_id > prescriptions.prescription_id
Ref: prescription_items.drug_id > inventory.drug_id
Ref: sales.patient_id > patients.patient_id
Ref: sales.user_id > users.user_id
Ref: sale_items.sale_id > sales.sale_id
Ref: sale_items.drug_id > inventory.drug_id
